fixed project cmake structure, now gui uses core library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,16 @@ project(tasklist LANGUAGES C)
 add_executable(tasklist main.c)
 
 add_subdirectory(gui)
+add_subdirectory(core)
 
 target_link_libraries(tasklist PUBLIC gui)
 target_include_directories(tasklist PUBLIC
                           "${PROJECT_BINARY_DIR}"
                           "${PROJECT_SOURCE_DIR}/gui"
+                          "${PROJECT_SOURCE_DIR}/core"
                           )
+
+target_link_libraries(gui PUBLIC core)
 
 # DEBUG
 set(G_MESSAGES_DEBUG all)
