added config.h.in for gui library, now executable can be used from any directory without any finding path issues

--- a/gui/config.h.in
+++ b/gui/config.h.in
@@ -1,1 +1,6 @@
 #define PROJECT_SOURCE_DIR "@PROJECT_SOURCE_DIR@"
+#define UI_FILES_PATH PROJECT_SOURCE_DIR "/gui/ui"
+#define CSS_FILES_PATH PROJECT_SOURCE_DIR "/gui/css"
+
+#define MAINWINDOW_UI_FILE_PATH UI_FILES_PATH "/mainwindow.ui"
+#define MAINWINDOW_CSS_FILE_PATH CSS_FILES_PATH "/mainwindow.css"
