added deadline functionality and scrolling

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -1,4 +1,10 @@
-add_library(gui utils.c tasksboxlist.c mainwindow.c)
+add_library(gui 
+    utils.c 
+    timeSpinButton.c
+    addTaskDialog.c 
+    tasksboxlist.c 
+    mainwindow.c
+)
 
 include_directories(${CMAKE_SOURCE_DIR}/core)
 
@@ -11,18 +17,14 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/path_config.h.in ${CMAKE_CURRENT_BINA
 
 target_include_directories(gui PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
-
 if(DEBUG)
     message(STATUS "Debug build mode")
     set(CMAKE_BUILD_TYPE Debug)
-    set(CMAKE_CXX_FLAGS "-g")
-    set(CMAKE_C_FLAGS "-g")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0")
 
-    set(CMAKE_EXE_LINKER_FLAGS "-g")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -g")
     set(CMAKE_POSITION_INDEPENDENT_CODE OFF)
-
-    set(CMAKE_CXX_FLAGS "-g -O0")
-    set(CMAKE_C_FLAGS "-g -O0")
 else()
     message(STATUS "Default build mode")
 endif()
