--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,18 +15,16 @@ target_include_directories(tasklist PUBLIC
 
 target_link_libraries(gui PUBLIC core)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lm -ldl")
 
 if(DEBUG)
     message(STATUS "Debug build mode")
     set(CMAKE_BUILD_TYPE Debug)
-    set(CMAKE_CXX_FLAGS "-g")
-    set(CMAKE_C_FLAGS "-g")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0")
 
-    set(CMAKE_EXE_LINKER_FLAGS "-g")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -g")
     set(CMAKE_POSITION_INDEPENDENT_CODE OFF)
-
-    set(CMAKE_CXX_FLAGS "-g -O0")
-    set(CMAKE_C_FLAGS "-g -O0")
 else()
     message(STATUS "Default build mode")
 endif()
