--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,18 +4,14 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/core_path_config.h.in ${CMAKE_CURRENT
 
 target_include_directories(core PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
-
 if(DEBUG)
     message(STATUS "Debug build mode")
     set(CMAKE_BUILD_TYPE Debug)
-    set(CMAKE_CXX_FLAGS "-g")
-    set(CMAKE_C_FLAGS "-g")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0")
 
-    set(CMAKE_EXE_LINKER_FLAGS "-g")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -g")
     set(CMAKE_POSITION_INDEPENDENT_CODE OFF)
-
-    set(CMAKE_CXX_FLAGS "-g -O0")
-    set(CMAKE_C_FLAGS "-g -O0")
 else()
     message(STATUS "Default build mode")
 endif()
